# mimic-iv-dbt

./: .claudeignore  .env.example  .gitignore  .mcp.json  Dockerfile  README.md  dashboard.py  mimiciv.py  pyproject.toml
.devcontainer/: devcontainer.json
mimic_iv_dbt/: .gitignore  dbt_project.yml  profiles.yml
mimic_iv_dbt/macros/: generate_schema_name.sql  read_mimic4.sql  surrogate_key.sql  top_concepts.sql
mimic_iv_dbt/models/marts/: _marts.yml  kpi_admission_base.sql  kpi_cohort_summary.sql  kpi_demographics.sql  kpi_ed_breakdowns.sql  kpi_ed_chief_complaints.sql  kpi_ed_summary.sql  kpi_outcomes.sql  kpi_patient_base.sql  kpi_payer_mix.sql  kpi_top_conditions.sql  kpi_top_drg.sql  kpi_top_drugs.sql  kpi_top_measurements.sql  kpi_top_procedures.sql
mimic_iv_dbt/models/omop/: _extra_tables.yml  _omop.yml  care_site.sql  cdm_source.sql  condition_era.sql  condition_occurrence.sql  cost.sql  death.sql  device_exposure.sql  dose_era.sql  drug_era.sql  drug_exposure.sql  episode.sql  episode_event.sql  fact_relationship.sql  location.sql  measurement.sql  metadata.sql  note.sql  note_nlp.sql  observation.sql  observation_period.sql  payer_plan_period.sql  person.sql  procedure_occurrence.sql  provider.sql  source_to_concept_map.sql  specimen.sql  visit_detail.sql  visit_occurrence.sql
mimic_iv_dbt/models/staging/mimic/: src_admissions.sql  src_chartevents.sql  src_d_items.sql  src_d_labitems.sql  src_d_micro.sql  src_discharge.sql  (+22 more)
mimic_iv_dbt/seeds/custom/: _seeds.yml  custom_mapping.csv  ed_vital_to_concept.csv  gsn_to_rxnorm.csv  insurance_to_concept.csv
(+9 files in other folders)
